@@ -91,7 +91,7 @@ public class XtremeParser implements AccountParser {
         String[] tokens = remaining.trim().split("\\s+");
         return Arrays.stream(tokens)
                 .filter(s -> !s.isEmpty() && s.length() > 1)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String stripKnownCredential(String remaining, String value, String prefixPattern) {
